@@ -56,6 +56,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10941: Fix imaplib.Internaldate2tuple to produce correct result near
+  the DST transition.  Patch by Joe Peterson.
+
 - Issue #9154: Fix parser module to understand function annotations.
 
 - Issue #14664: It is now possible to use @unittest.skip{If,Unless} on a
